examples/kubernetes/loadbalancer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portail
  namespace: portail-system
spec:
  type: LoadBalancer
  selector:
    app: portail
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  - name: http-alt
    port: 8080
    targetPort: 8080
  - name: https-alt
    port: 8443
    targetPort: 8443
